Fixed nav width and left alignments of main elements

--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,14 @@ p.narrow {
 	}
 }
 
+.no-left-padding {
+	padding-left: 0;
+}
+
+.no-left-margin {
+	margin-left: 0;
+}
+
 .right {
 	float: right;
 }
